--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>The Gallery - Fashion Blog</title>
-<link rel="stylesheet" href="styles.css" />
+<link rel="stylesheet" href="css/styles.css" />
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 <script>
 $(window).load(function() {
@@ -19,7 +19,7 @@ $(window).load(function() {
                 <a href="#" id="icon"></a>
                 <ul>
                     <li><a href="#" class="current">Home</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="/blog.html">Blog</a></li>
                     <li><a href="#">Gallery</a></li>
                     <li><a href="#">Looks</a></li>
                     <li><a href="#">About Me</a></li>
@@ -105,6 +105,6 @@ $(window).load(function() {
         <footer class="secondFooter">
             <p>Gallery, 2017.</p>
         </footer>  
-<script src="jquery.blueberry.js"></script>
+<script src="js/jquery.blueberry.js"></script>
     </body>
 </html>
