--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <title>Blog Page</title>
     <meta name="description" content="Blog content" />
     <meta name="viewport" content="width=device-width,user-scalable=no,inital-scale=1,maximum-scale=1,minumum-scale=1" />
-    <link rel="stylesheet" href="css/blogstyles.css" />
+    <link rel="stylesheet" href="css/blogStyles.css" />
 </head>
 <body>
     <header>
