blog page updated

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ $(window).load(function() {
             </section>
         </footer>
         <footer class="secondFooter">
-            <p>Gallery, 2017.</p>
+            <p>gallery, 2017.</p>
         </footer>  
 <script src="js/jquery.blueberry.js"></script>
     </body>
