--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,24 @@
         <div id="main">
             <div class="content">
                 <article>
-                    <h1>Under Construction</h1>
+                    <h1 style="font-family: 'The Girl Next Door', cursive;">The Reason</h1>
+                    <p>
+                        "
+Hello fellow peeps! I am Ausbaldo and I am a guy that loves to express himself without setting limitations from others, but simply taking inspiration and admiration of what people wear, do, eat, and listen to. I then use that inspiration and admiration and turn it into something I could do and somewhat replicate. I then try to tailor things to fit my life and of course a big one would be to fit my budget ($$$$$). Just like a lot of people out there I wish I could be rich and famous, have all the money to buy the glam, but I can’t.
+ 
+So why this website?
+The biggest reason is because I always get asked questions like "Where did you buy that top/bottom" or "Where did you get what you are wearing?" This website will help me have a better platform to answer some of these questions and If I could use myself to inspire and help 1 person out there then I will be content and know that I have done my job.
+ 
+If I had to name my style of fashion, then my # would be #FashionOnABudget"</br>
+                    </br>
+                    <img src="images/auzzie.png" width="45%" height="45%" style="display: block; margin: 2% auto 0 auto;" />
+                    
+                    <a href="#"><img src="images/readmore.png" height="20"/></a>
+                    </p>
+                </article>
+
+                <article>
+                    <h1 style="font-family: 'Inconsolata', monospace;">Under Construction</h1>
                     <div id="slider">
                     <img src="images/construction-tape.png" width="100%" height="5%"/>
                     </div>
