--- a/index.html
+++ b/index.html
@@ -84,10 +84,13 @@ $(window).load(function() {
         <footer>
             <section>
                 <h3><b>Gallery</b></h3>
-                <p><b>+1 (619)254-8443</b><br><br>
+<!--
+                <p><b>+1 (760) 960-0256</b><br><br>
                 San Diego, Ca<br>
-                diegoamcorrales@gmail.com</p>
+                ausbaldocorrales@gmail.com</p>
+-->
             </section>
+            <div id="contact">
             <section>
                 <h3>Connect With Us!</h3>
                 <ul class="media">
@@ -98,6 +101,7 @@ $(window).load(function() {
                     </li>
                 </ul>
             </section>
+            </div>
             <section>
                 <img src="images/Clothes.png" height="200" />
             </section>
