--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ $(window).load(function() {
                     <li><a href="#">Gallery</a></li>
                     <li><a href="#">Looks</a></li>
                     <li><a href="#">About Me</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
            </nav>
         </header>
